# freeotp-vault

./: .bumpversion.cfg  AGENTS.md  CHANGELOG.md  README.md  SPEC.md  pyproject.toml
.github/workflows/: pypi-publish.yml
src/freeotp_vault/: __init__.py  __main__.py  cli.py  crypto.py  gdrive.py  keyring_store.py  otp.py  parser.py  vault.py
tests/: conftest.py  test_crypto.py  test_gdrive.py  test_otp.py  test_parser.py  test_vault.py
