[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "freeotp-vault"
version = "0.1.1"
description = "Encrypted CLI vault for FreeOTP JSON exports with system keyring support"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Dario Clavijo", email = "clavijodario@gmail.com"}
]
dependencies = [
    "cryptography>=42.0",
    "keyring>=25.0",
    "pyotp>=2.9",
    "google-api-python-client>=2.0",
    "google-auth-httplib2>=0.2",
    "google-auth-oauthlib>=1.0",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "mypy",
    "hatch",
]
test = [
    "pytest",
    "pytest-cov",
    "pytest-mock",
]
lint = [
    "ruff",
    "mypy",
]
all = ["freeotp-vault[dev,test,lint]"]

[project.scripts]
freeotp-vault = "freeotp_vault.__main__:main"

[project.urls]
Homepage = "https://github.com/daedalus/freeotp-vault"
Repository = "https://github.com/daedalus/freeotp-vault"
Issues = "https://github.com/daedalus/freeotp-vault/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/freeotp_vault"]

[tool.hatch.build.targets.sdist]
include = ["src/freeotp_vault"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "ANN", "TCH", "N", "C4", "ARG"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/*" = ["ANN", "ARG"]
"src/freeotp_vault/gdrive.py" = ["ANN", "ARG"]
"src/freeotp_vault/vault.py" = ["ANN"]

[tool.ruff.lint.pydocstyle]
convention = "google"



[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short --cov=src --cov-fail-under=80"
filterwarnings = ["ignore::DeprecationWarning"]

[tool.coverage.run]
source = ["src"]
branch = true

[tool.coverage.report]
exclude = ["tests/*", "*/__init__.py"]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]